--- a/Engine/ColorVision.Engine/Services/Devices/Sensor/Templates/EditTemplateModeDetail.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Sensor/Templates/EditTemplateModeDetail.xaml
@@ -14,7 +14,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Margin="2">
-            <Button Content="添加指令" Command="{Binding CreateCommand}"/>
+            <Button Content="{x:Static properties:Resources.AddCmd}" Command="{Binding CreateCommand}"/>
         </StackPanel>
         <ListView x:Name="ListView1" Grid.Row="1" Padding="5,0" ItemsSource="{Binding SensorCommands}"  ScrollViewer.HorizontalScrollBarVisibility="Auto" >
             <ListView.Resources>
@@ -49,27 +49,27 @@
                                     </Grid.ColumnDefinitions>
                                     <StackPanel Grid.Row="0"  Width="400" Margin="0,5">
                                         <DockPanel Margin="0,0,0,5">
-                                            <TextBlock Text="指令类型" Width="60"/>
+                                            <TextBlock Text="{x:Static properties:Resources.CommandType}" Width="60"/>
                                             <ComboBox x:Name="ComboBoxType" Initialized="ComboBoxType_Initialized" SelectedValue="{Binding SensorCmdType}" Style="{StaticResource ComboBox.Small}"/>
                                         </DockPanel>
                                         <DockPanel Margin="0,0,0,5">
-                                            <TextBlock Text="发送指令" Width="60"/>
+                                            <TextBlock Text="{x:Static properties:Resources.SendCmd}" Width="60"/>
                                             <TextBox  x:Name="TextBoxSendCommand" Height="50" Padding="5" AcceptsReturn="True" VerticalContentAlignment="Top"  TextWrapping="Wrap"  Style="{StaticResource TextBox.Small}" Text="{Binding Request}"/>
                                         </DockPanel>
                                         <DockPanel Margin="0,0,0,5">
-                                            <TextBlock Text="返回指令" Width="60"/>
+                                            <TextBlock Text="{x:Static properties:Resources.RevCmd}" Width="60"/>
                                             <TextBox  x:Name="TextBoxResCommand" Height="50" Padding="2"  AcceptsReturn="True" VerticalContentAlignment="Top"  TextWrapping="Wrap"  Style="{StaticResource TextBox.Small}"  Text="{Binding Response}"/>
                                         </DockPanel>
                                         <DockPanel Margin="0,0,0,5">
-                                            <TextBlock Text="超时(ms)" Width="60"/>
+                                            <TextBlock Text="{x:Static properties:Resources.TimeOut_Ms}" Width="60"/>
                                             <TextBox  TextWrapping="Wrap"  Style="{StaticResource TextBox.Small}"  Text="{Binding Timeout}"/>
                                         </DockPanel>
                                         <DockPanel Margin="0,0,0,5">
-                                            <TextBlock Text="延时(ms)" Width="60"/>
+                                            <TextBlock Text="{x:Static properties:Resources.DelayMs}" Width="60"/>
                                             <TextBox  TextWrapping="Wrap"  Style="{StaticResource TextBox.Small}"  Text="{Binding  Delay}"/>
                                         </DockPanel>
                                         <DockPanel Margin="0,0,0,5">
-                                            <TextBlock Text="重试次数" Width="60"/>
+                                            <TextBlock Text="{x:Static properties:Resources.RetryCount}" Width="60"/>
                                             <TextBox TextWrapping="Wrap"  Style="{StaticResource TextBox.Small}"  Text="{Binding  RetryCount}"/>
                                         </DockPanel>
                                     </StackPanel>
