--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewSpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewSpectrum.xaml
@@ -134,7 +134,7 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="亮度Lv(cd/m2)" >
+                            <GridViewColumn  Header="{x:Static properties:Resources.BrightnessLvCdM2}" >
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate  DataType="{x:Type local:ViewResultSpectrum}">
                                         <TextBlock Text="{ Binding Lv}"/>
