--- a/Engine/ColorVision.Engine/Templates/Flow/FlowEngineToolWindow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/FlowEngineToolWindow.xaml
@@ -37,7 +37,7 @@
                 <Button x:Name="ButtonNew"  Content="{x:Static properties:Resources.New}" Click="Button_Click_New"  Width="70" />
                 <Button x:Name="ButtonClear"  Content="{x:Static properties:Resources.Clear}" Click="Button_Click_Clear"  Width="70"/>
                 <Button x:Name="ButtonSave"  Content="{x:Static properties:Resources.Save}" Click="Button_Click_Save" Width="70"  Margin="0,0,10,0"/>
-                <Button  Content="自动对齐" Click="AutoAlignment_Click" Width="70"/>
+                <Button  Content="{x:Static properties:Resources.AutoAlign}" Click="AutoAlignment_Click" Width="100"/>
             </StackPanel>
             <Grid Grid.Column="2">
                 <Slider x:Name="ZoomSlider"  Width="200" Value="{Binding STNodeEditorHelper.CanvasScale}" Maximum="5" Minimum="0.2"  HorizontalAlignment="Right"/>
