--- a/Engine/ColorVision.Engine/Templates/Jsons/KB/EditTemplateJson.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/KB/EditTemplateJson.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ColorVision.Engine.Templates.Jsons.KB"
+             xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:TemplateJsonKBParam}"
              d:DesignHeight="450" d:DesignWidth="800" Height="450" Width="800">
@@ -28,9 +29,9 @@
         </Grid>
 
         <StackPanel x:Name="FuncStackPanel"  Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,0,0">
-            <Button Content="图形编辑" Command="{Binding EditCommand}"  Margin="0,0,5,0"/>
-            <Button Content="校验Json" Margin="0,0,5,0" />
-            <Button Content="重置" Command="{Binding ResetCommand}"  Margin="0,0,0,0"/>
+            <Button Content="{x:Static properties:Resources.ImageEdit}" Command="{Binding EditCommand}"  Margin="0,0,5,0"/>
+            <Button Content="{x:Static properties:Resources.VerifyJson}" Margin="0,0,5,0" />
+            <Button Content="{x:Static properties:Resources.Reset}" Command="{Binding ResetCommand}"  Margin="0,0,0,0"/>
         </StackPanel>
         
 
