--- a/ColorVision/Wizards/WizardWindow.xaml
+++ b/ColorVision/Wizards/WizardWindow.xaml
@@ -45,7 +45,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock x:Name="StepIndicator" Grid.Row="0" Text="步骤 1 / 1" HorizontalAlignment="Center" FontSize="14" Margin="0,0,0,5"/>
+            <TextBlock x:Name="StepIndicator" Grid.Row="0" Text="{x:Static properties:Resources.Step11}" HorizontalAlignment="Center" FontSize="14" Margin="0,0,0,5"/>
             <ProgressBar x:Name="WizardProgress" Grid.Row="1" Height="5" Minimum="0" Maximum="100" Value="0"/>
         </Grid>
         
