--- a/Engine/ColorVision.Engine/Archive/ArchiveDetailPage.xaml
+++ b/Engine/ColorVision.Engine/Archive/ArchiveDetailPage.xaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ColorVision.Engine.Archive.Dao"
+             xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
-             Title="归档查询"  d:DesignHeight="450" d:DesignWidth="800" Loaded="Page_Loaded" Initialized="UserControl_Initialized">
+             Title="{x:Static properties:Resources.ArchiveQuery}"  d:DesignHeight="450" d:DesignWidth="800" Loaded="Page_Loaded" Initialized="UserControl_Initialized">
     <Page.Resources>
         <Style TargetType="TextBlock" >
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}" />
@@ -50,21 +51,21 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="设备名称">
+                            <GridViewColumn  Header="{x:Static properties:Resources.DeviceName}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate DataType="{x:Type local:ArchivedDetailModel}"  >
                                         <TextBlock Text="{Binding DeviceCode}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="输入参数">
+                            <GridViewColumn  Header="{x:Static properties:Resources.ParamInput}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate DataType="{x:Type local:ArchivedDetailModel}"  >
                                         <TextBlock Text="{Binding InputCfg}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="名称">
+                            <GridViewColumn  Header="{x:Static properties:Resources.Name}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate DataType="{x:Type local:ArchivedDetailModel}"  >
                                         <TextBlock Text="{Binding PGuid}"/>
