--- a/Engine/ColorVision.Engine/Services/Devices/PG/InfoPG.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/PG/InfoPG.xaml
@@ -94,7 +94,7 @@
                     <TabItem Header="{x:Static properties:Resources.BasicInformation}">
                         <StackPanel Margin="5">
                             <DockPanel>
-                                <TextBlock Text="设备Code:" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.DeviceCode}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.Code}"/>
                             </DockPanel>
                             <DockPanel>
@@ -102,19 +102,19 @@
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Id}"/>
                             </DockPanel>
                             <DockPanel Margin="0,2" >
-                                <TextBlock Text="设备自动连接"  Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.DeviceAutoConnect}"  Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.IsAutoOpen}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="发送信道" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.TransmitChannel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.SendTopic}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="接收信道" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.ReceiveChannel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.SubscribeTopic}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="心跳时间(ms)"  Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.HeartbeatTime}"  Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.HeartbeatTime}"/>
                             </DockPanel>
                             <DockPanel Margin="0,2" >
@@ -123,22 +123,22 @@
                             </DockPanel>
                         </StackPanel>
                     </TabItem>
-                    <TabItem Header="配置信息">
+                    <TabItem Header="{x:Static properties:Resources.ConfigerInfo}">
                         <StackPanel Margin="5">
                             <DockPanel>
-                                <TextBlock Text="类别型号" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.CategoryModel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Category}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="通讯方式" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.CommunicationType}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding IsNet}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock  Text="IP地址" Width="120"/>
+                                <TextBlock  Text="{x:Static properties:Resources.IPAddress}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Addr}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock  Text="端口" Width="120"/>
+                                <TextBlock  Text="{x:Static properties:Resources.Port}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Port}"/>
                             </DockPanel>
                         </StackPanel>
