--- a/Engine/ColorVision.Engine/Services/WindowService.xaml
+++ b/Engine/ColorVision.Engine/Services/WindowService.xaml
@@ -30,8 +30,8 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <StackPanel Orientation="Horizontal">
-                    <Button Content="切换列表" Margin="5,0,5,0" Click="Button_Click_2" />
-                    <Button Content="重启WindowsService" Click="Button_Click_1" />
+                    <Button Content="{x:Static properties:Resources.ToggleList}" Margin="5,0,5,0" Click="Button_Click_2" />
+                    <Button Content="{x:Static properties:Resources.RestartWindowsService}" Click="Button_Click_1" />
                 </StackPanel>
 
                 <TreeView x:Name="TreeView1" Grid.Row="1" Style="{StaticResource TreeView.Small}" Loaded="TreeView1_Loaded"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectedItemChanged="TreeView1_SelectedItemChanged " Margin="5">
