--- a/Engine/ColorVision.Engine/Services/Devices/CfwPort/DisplayCfwPort.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/CfwPort/DisplayCfwPort.xaml
@@ -68,7 +68,7 @@
                     <DockPanel Margin="0,2">
                         <Button DockPanel.Dock="Right" Content="GetPort"  Click="GetPort_Click" />
                         <Button DockPanel.Dock="Right" Content="SetPort"  Click="SetPort_Click" />
-                        <hc:ComboBox  x:Name="TextPort"  Width="150" HorizontalAlignment="Left" Style="{StaticResource ComboBox.Small}"  IsEditable="True" AutoComplete ="True" hc:InfoElement.ShowClearButton="True"/>
+                        <hc:ComboBox  x:Name="CombPort"  Width="150" HorizontalAlignment="Left" Style="{StaticResource ComboBox.Small}"  IsEditable="True" AutoComplete ="True" hc:InfoElement.ShowClearButton="True"/>
                     </DockPanel>
                 </StackPanel>
 
