--- a/Engine/ColorVision.Engine/Templates/ARVR/Distortion/DisplayDistortion.xaml
+++ b/Engine/ColorVision.Engine/Templates/ARVR/Distortion/DisplayDistortion.xaml
@@ -27,7 +27,7 @@
                         <Button DockPanel.Dock="Right" Content="{x:Static properties:Resources.Open}" Click="Button_OpenLocal_Click" />
                     </StackPanel>
                 </TabItem>
-                <TabItem Background="Transparent" Header="服务" x:Name="AlgRawSelect" IsSelected="True">
+                <TabItem Background="Transparent" Header="{x:Static properties:Resources.Service}" x:Name="AlgRawSelect" IsSelected="True">
                     <StackPanel>
                         <DockPanel Margin="0,2">
                             <TextBlock Text="{x:Static properties:Resources.ImageSource}" Margin="10,0,0,0" Width="40"/>
