--- a/Engine/ColorVision.Engine/Templates/Jsons/Ghost2/DisplayGhost2.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/Ghost2/DisplayGhost2.xaml
@@ -29,7 +29,7 @@
             <TabControl BorderThickness="0" Background="Transparent">
                 <TabItem Background="Transparent" Header="{x:Static properties:Resources.Local}" IsSelected="{Binding IsLocalFile}" >
                     <StackPanel Orientation="Horizontal" Margin="0,2">
-                        <TextBlock Text="文件" Margin="0,0,10,0" Width="40"/>
+                        <TextBlock Text="{x:Static properties:Resources.File}" Margin="0,0,10,0" Width="40"/>
                         <TextBox x:Name="ImageFile" Style="{StaticResource TextBox.Small}"  Width="150" Text="{Binding ImageFilePath}" Margin="0,0,2,0" HorizontalAlignment="Left" />
                         <Button  Content="..." DockPanel.Dock="Right" HorizontalAlignment="Right"  Click="Open_File" />
                         <Button DockPanel.Dock="Right" Content="{x:Static properties:Resources.Open}" Click="Button_OpenLocal_Click" />
